--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,78 @@
 /*
- * Globals
+ * ****************** Globals **************** 
  */
-@import url('https://fonts.googleapis.com/css2?family=Alexandria:wght@600&family=Poppins:ital,wght@0,700;0,800;0,900;1,300;1,400&family=Varela&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Alexandria:wght@600&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&family=Varela&display=swap');
 
-/*ligth mode*/
+*{
+    font-family:  'Poppins', Georgia, 'Times New Roman', Times, serif;;
+}
+
+/* ******************** mode ligth ******************* */
 :root {
     --color-main: rgb(225, 37, 27);
     --color-2: rgb(0, 27, 72);
     --color-3: rgb(255, 251, 244);
     --color-4: rgb(255, 255, 255);
-    --color-5: rgb(220, 220, 220);
+    --color-5: rgb(200, 200, 200);
+    --color-6: rgb(255, 255, 255);
+
     --border-boton: rgb(0, 27, 72);
     --border-link: rgb(255, 255, 255);
+    --body-bg: rgb(255, 255, 255);
+    --bg-ask: rgb(255, 255, 255);
 
+    --color-red: rgb(225, 37, 27);
+    --color-black: rgb(6, 6, 6);
+    --color-gray: rgb(58, 57, 57);
+    --color-odoo-bg: rgb(247, 247, 247);
+    --color-bg-footer: rgb(0, 27, 72);
+
+    --btn-mode-color: rgb(6, 6, 6);
     --btn-color: rgb(0, 27, 72);
     --btn-h: rgb(226, 53, 44);
     --bg-img: url("../img/hero1.png");
-    --icon: url("../img/moon.png");
+    --icon-plus: url("../img/plus1.png");
 }
 
 
-
-/* Dark mode*/
+/* ******************** mode dark ******************* */
 .oscuro {
     --color-main: rgb(6, 6, 6);
     --color-2: rgb(225, 37, 27);
+    --color-4: rgb(217, 213, 213);
+    --color-5: rgb(168, 165, 165);
+    --color-6: rgb(6, 6, 6);
+
     --border-boton: rgb(225, 37, 27);
     --border-link: rgb(225, 37, 27);
+    --body-bg: rgb(25, 25, 25);
+    --bg-ask: rgb(15, 15, 15);
 
+    --color-black: rgb(217, 213, 213);
+    --color-gray: rgb(167, 165, 165);
+    --color-odoo-bg: rgb(25, 25, 25);
+    --color-bg-footer: rgb(6, 6, 6);
+
+    --btn-mode-color: rgb(9, 3, 174);
     --btn-color: rgb(25, 25, 25);
     --btn-h: rgb(225, 37, 27);
     --bg-img: url("../img/hero2.png");
-    --icon: url("../img/sun.svg");
+    --icon-plus: url("../img/plus2.png");
+}
+
+body {
+    background-color: var(--body-bg) !important;
 }
 
 
-/*
- *                  Movile
- */
+
+/* **************************************************************
+                               MOVILE 
+   ************************************************************** */
+
+
+/* ******************** section header ******************* */
 
 header {
     background-color: transparent !important;
@@ -60,11 +94,15 @@ header {
     background-color: transparent !important;
 }
 
+.toggle-bg {
+    background-color: var(--color-main) !important;
+}
+
 
 
 .txt-color {
     color: var(--color-5) !important;
-    font-size: 30px !important
+    font-size: 20px !important
 }
 
 .nav-link {
@@ -81,12 +119,10 @@ header {
 
 
 
-/*
- *                Section of Hero
- */
+/* ******************** section of hero ******************* */
 
 .hero-container {
-    height: 95vh;
+    height: 100vh;
     background-image: var(--bg-img);
     background-repeat: no-repeat;
     background-position: center center;
@@ -114,7 +150,7 @@ header {
 }
 
 .txt-title {
-    font-family: 'Poppins', Georgia, 'Times New Roman', Times, serif;
+    font-weight: 700;
     text-align: center;
     color: var(--color-4);
 }
@@ -142,8 +178,8 @@ header {
     padding: 8px 20px;
     margin-right: 5px;
     text-align: center;
-    font-size: 10px;
-    font-weight: 500;
+    font-size: 12px;
+    font-weight: 600;
     cursor: pointer;
     background-color: var(--btn-color);
     color: var(--color-5);
@@ -165,15 +201,18 @@ header {
     display: none;
 }
 
+
+/* ******************** color theme change button ******************* */
+
 .btn-mode {
-    padding: 3px;
+    padding: 5px;
     border-radius: 50%;
-    background-color: var(--color-2);
+    background-color: var(--btn-mode-color);
 }
 
 .moon {
     display: block;
-    width: 18px;
+    width: 15px;
     margin: auto;
     filter: invert(1);
     transition: 0.4;
@@ -181,23 +220,272 @@ header {
 
 .sun {
     display: none;
-    width: 18px;
+    width: 15px;
     margin: auto;
     filter: invert(1);
     transition: 0.4;
 }
 
 
-/*
- *                             Desktop
- */
+/* ******************** section of Odoo ******************* */
+
+.section-odoo {
+    width: 100%;
+    background-color: var(--color-odoo-bg);
+}
+
+.carousel-i {
+    width: 100%;
+    height: 400px;
+}
+
+.carousel-caption {
+    bottom: 4rem !important;
+}
+
+.title-partner {
+    font-weight: 700;
+    font-size: 30px;
+    color: var(--color-black);
+
+}
+
+.title-partner span {
+    color: var(--color-red);
+}
+
+.p-partner {
+    color: var(--color-gray);
+}
+
+.gold-partner {
+    width: 150px;
+}
+
+.carousel-indicators .active {
+    background-color: var(--color-red) !important;
+}
+
+.indic {
+    background-color: var(--color-gray) !important;
+}
+
+/* *********************** Section of asked ******************************** */
+
+ .section-asked{
+    max-width: 1000px;
+    margin: auto;
+    padding: 0 11px;
+
+
+    --color-1: rgb(17, 1, 1);
+    --color-2: rgb(20, 1, 1);
+    --color-3: rgb(17, 1, 1);
+ }
+
+ .asked-h5{
+    display: block;
+    margin: auto;
+    text-align: center;
+ }
+
+ .accordion-button::after{
+    background-image: var(--icon-plus) !important;
+ }
+
+ .ask-item{
+    font-weight: 500;
+    color: var(--color-gray) !important;
+ }
+
+ .bg-ask-item{
+    background-color: var(--color-6) !important;
+ }
+
+ .ask-p{
+    color: var(--color-black) !important;
+ }
+
+ .bg-ask{
+    background-color: var(--bg-ask) !important;
+ }
+
+/* ************************ section footer ******************************** */
+
+.section-footer {
+    width: 100%;
+    padding-top: 20px;
+    background-color: var(--color-bg-footer);
+}
+
+.footer-container {
+    padding: 12px;
+}
+
+.footer-container h2{
+    display: block;
+    width: 200px;
+    font-size: 40px;
+    color: var(--color-4);
+    text-align: center;
+    margin: auto;
+    padding: 15px 0;
+}
+
+.footer {
+    max-width: 1000px;
+    margin: auto;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 1.5px solid var(--color-4);
+
+}
+
+.footer-item {
+    height: 100%;
+}
+
+
+.footer-item h5 {
+    color: var(--color-4);
+    font-weight: 600;
+    font-size: 18px;
+    text-align: center;
+}
+
+.footer-1 p {
+    color: var(--color-5);
+    text-align: center;
+}
+
+.font-size {
+    font-size: 14px;
+}
+
+.ft-section-2{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.footer-2 {
+    margin-top: 10px;
+}
+
+.footer-2 ul {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}
+
+.footer-2 ul a {
+    text-decoration: none;
+    color: var(--color-5);
+    transition: .4s;
+}
+
+.footer-2 ul a:hover {
+    color: var(--color-4);
+}
+
+.footer-container P {
+    color: var(--color-5);
+}
+
+.copy-rigth {
+    display: block;
+    margin: auto;
+    font-size: 13px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+
+/* **************************************************************
+                              TABLE 
+   ************************************************************** */
+
+@media (min-width:500px) {
+
+    .hero-container {
+        height: 100vh;
+        background-image: var(--bg-img);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 100vh;
+        background-color: var(--color-main);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .hero {
+        height: 100%;
+        margin: auto;
+        padding: 0 11px;
+        max-width: 1000px;
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: repeat(10, 1fr);
+    }
+
+    .title-hero {
+        grid-column: 2 / 10;
+        grid-row: 5 / 9;
+    }
+
+    .txt-title {
+        font-family: 'Poppins', Georgia, 'Times New Roman', Times, serif;
+        text-align: center;
+        color: var(--color-4);
+    }
+
+    .txt-title span {
+        color: var(--color-2);
+    }
+
+    .txt-p {
+        color: var(--color-5);
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+        line-height: 15px;
+    }
+
+    .btn-container {
+        justify-content: center;
+        flex-direction: row;
+    }
+
+    /* ******************* section footer ************************** */
+
+    .ft-section-2 {
+        width: 100%;
+        flex-direction: row;
+    
+    }
+
+    .footer-2 {
+        margin-top: 20px;
+        width: 33.33%;
+        margin-left: 10px;
+    }
+
+
+
+}
+
+
+/* **************************************************************
+                              DESKTOP 
+   ************************************************************** */
 
 @media (min-width:992px) {
 
-    /* 
- *       Section of header
- */
-
+    /* ******************** section of header ******************* */
     .navbar-collapse {
         background-color: transparent !important;
     }
@@ -211,9 +499,7 @@ header {
         font-size: 15px !important;
     }
 
-    /*
- *       Section of Hero
- */
+    /* ******************** section of hero ******************* */
 
     .hero {
         grid-template-rows: repeat(6, 1fr);
@@ -237,7 +523,7 @@ header {
     }
 
     .btn-container {
-        flex-direction: row;
+        justify-content: start;
     }
 
     .btn-hero {
@@ -257,7 +543,65 @@ header {
         width: 100%;
     }
 
+    /* ******************** section of Odoo ******************* */
+
+    .carousel-i {
+        height: 300px;
+    }
+
+    .carousel-caption {
+        bottom: 4rem !important;
+    }
+
+    /* ************************ section footer ******************************** */
+    
+    .footer {
+        flex-direction: row;
+    
+    }
+
+    .ft-section-2{
+        width: 40%;
+    }
+
+    .footer-item h5 {
+        text-align: start;
+    }
+
+    .footer-1 {
+        width: 50%;
+        margin-right: 35px;
+    }
+
+    .footer-1 p {
+        text-align: start;
+    }
+
+    .footer-2 {
+        margin-top: 0;
+    }
+
+    .footer-2 ul {
+        text-align: start;
+    }
+
+
+    .footer-2 ul a:hover {
+        color: var(--color-4);
+    }
+
+    .copy-rigth {
+        display: block;
+        margin: auto;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        text-align: center;
+    }
+
 }
+
+
+
 
 /* Service */
 .icon-service {
@@ -265,4 +609,14 @@ header {
     width: var(--box-size);
     height: var(--box-size);
     padding: 10px;
+}
+
+.prube{
+    width: 100px;
+    background-color: aqua;
+    cursor: pointer;
+}
+.prube::after{
+    
+    border: 2px solid #ffff;
 }
