--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Alexandria:wght@600&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&family=Varela&display=swap');
 
-*{
-    font-family:  'Poppins', Georgia, 'Times New Roman', Times, serif;;
+* {
+    font-family: 'Poppins', Georgia, 'Times New Roman', Times, serif;
+    ;
 }
 
 /* ******************** mode ligth ******************* */
@@ -33,6 +34,7 @@
     --btn-h: rgb(226, 53, 44);
     --bg-img: url("../img/hero1.png");
     --icon-plus: url("../img/plus1.png");
+    --icon-minus: url("../img/minus1.png");
 }
 
 
@@ -59,6 +61,7 @@
     --btn-h: rgb(225, 37, 27);
     --bg-img: url("../img/hero2.png");
     --icon-plus: url("../img/plus2.png");
+    --icon-minus: url("../img/minus2.png");
 }
 
 body {
@@ -99,6 +102,13 @@ header {
 }
 
 
+.logo-container {
+    width: 110px !important;
+}
+
+.logo {
+    width: 100% !important;
+}
 
 .txt-color {
     color: var(--color-5) !important;
@@ -272,7 +282,7 @@ header {
 
 /* *********************** Section of asked ******************************** */
 
- .section-asked{
+.section-asked {
     max-width: 1000px;
     margin: auto;
     padding: 0 11px;
@@ -281,34 +291,39 @@ header {
     --color-1: rgb(17, 1, 1);
     --color-2: rgb(20, 1, 1);
     --color-3: rgb(17, 1, 1);
- }
+}
 
- .asked-h5{
+.asked-h5 {
     display: block;
     margin: auto;
     text-align: center;
- }
+}
 
- .accordion-button::after{
+.accordion-button::after {
     background-image: var(--icon-plus) !important;
- }
+}
 
- .ask-item{
+.accordion-button:not(.collapsed)::after {
+    background-image: var(--icon-minus) !important;
+}
+
+.ask-item {
     font-weight: 500;
     color: var(--color-gray) !important;
- }
+}
 
- .bg-ask-item{
+.bg-ask-item {
     background-color: var(--color-6) !important;
- }
+}
 
- .ask-p{
+.ask-p {
     color: var(--color-black) !important;
- }
+}
 
- .bg-ask{
+.bg-ask {
     background-color: var(--bg-ask) !important;
- }
+}
+
 
 /* ************************ section footer ******************************** */
 
@@ -322,7 +337,7 @@ header {
     padding: 12px;
 }
 
-.footer-container h2{
+.footer-container h2 {
     display: block;
     width: 200px;
     font-size: 40px;
@@ -364,7 +379,7 @@ header {
     font-size: 14px;
 }
 
-.ft-section-2{
+.ft-section-2 {
     display: flex;
     flex-direction: column;
 }
@@ -465,7 +480,7 @@ header {
     .ft-section-2 {
         width: 100%;
         flex-direction: row;
-    
+
     }
 
     .footer-2 {
@@ -553,14 +568,94 @@ header {
         bottom: 4rem !important;
     }
 
-    /* ************************ section footer ******************************** */
-    
-    .footer {
-        flex-direction: row;
-    
+    /********************** section busines ********************* */
+
+    .section-busines {
+        width: 100%;
+        background-color: var(--color-odoo-bg);
     }
 
-    .ft-section-2{
+    .main-busines {
+        max-width: 1000px;
+        margin: auto;
+        display: flex;
+        padding: 0 11px;
+    }
+
+    .busines-content {
+        padding: 0 11px;
+        width: 50%;
+    }
+
+    .p-busines {
+        color: var(--color-gray);
+        font-size: 15px;
+    }
+
+    .box-container {
+        width: 100%;
+        display: grid;
+        grid-template-rows: repeat(8, 1fr);
+        grid-template-columns: repeat(8, 1fr);
+    }
+
+    .box {
+        width: 218px;
+        height: 110px;
+        background-color: var(--color-bg-footer);
+        border-radius: 15px;
+        padding: 1.5em;
+    }
+
+    .one{
+        grid-row: 1 / 5;
+        grid-column: 1 / 5;
+        margin: 0 7px 7px 0;
+    }
+
+    .two{
+        grid-row: 1 / 5;
+        grid-column: 5 / 9;
+        margin: 0 0 7px 7px;
+    }
+
+    .three{
+        grid-row: 5 / 9;
+        grid-column: 1 / 5;
+        margin: 7px 7px 0 0;
+    }
+
+    .four{
+        grid-row: 5 / 9;
+        grid-column: 5 / 9;
+        margin: 7px 0 0 7px;
+    }
+
+    .box-letter{
+        color: var(--c);
+        text-align: center;
+    }
+
+    .b-l-t{
+        font-size: 30px;
+        font-weight: 700;
+        color: var(--color-4);
+    }
+
+    .b-l-p{
+        font-size: 12px;
+        line-height: 12px;
+        color: var(--color-5);
+    }
+
+    /* ************************ section footer ******************************** */
+
+    .footer {
+        flex-direction: row;
+
+    }
+
+    .ft-section-2 {
         width: 40%;
     }
 
@@ -611,12 +706,13 @@ header {
     padding: 10px;
 }
 
-.prube{
+.prube {
     width: 100px;
     background-color: aqua;
     cursor: pointer;
 }
-.prube::after{
-    
+
+.prube::after {
+
     border: 2px solid #ffff;
 }
